Found an alignment that needed to be fixed before release.

--- a/assets/css/desktop-style.css
+++ b/assets/css/desktop-style.css
@@ -59,7 +59,7 @@ header nav ul li a:hover {
 }
 
 .accomodations_section h2 {
-    margin: 46px 0 28px -5px;
+    margin: 46px 0 28px 5px;
 }
 
 .accomodations_grid {
@@ -67,14 +67,13 @@ header nav ul li a:hover {
     display: grid;
     width: 95%;
     margin-top: -12px;
-    margin-left: 1%;
     gap: 30px;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(3, 30%);
 }
 
 .display_more {
-    margin-top: 44px;
+    margin: 44px 0px 0px 5px;
 }
 
 
@@ -86,10 +85,6 @@ header nav ul li a:hover {
     margin-left: 40px;
     min-width: 328px;
     border-radius: 15px;
-}
-
-.most_popular_title {
-    font-size: 0.85rem;
 }
 
 .popular_price {
